2006-11-18  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_first_visible_line().
 * src/interface.c, src/geany.h, src/sci_cb.h, src/keyfile.c,
   src/vte.c, src/search.c, src/document.c, src/prefs.c, geany.glade:
   Applied patch from Bob Doan to prevent scrolling when wrap searching
   around a document, and to add a preference for suppressing search
   dialogs when wrapping or after Find Next.
   Rearranged some Preferences dialog options, added Files tab.
   Disable tab position when file tabs are hidden (not new file tab
   placement option, it still affects order of pages).
 * src/interface.c, geany.glade:
   Add Preferences frame alignment for Tools, Templates, Keybindings.
   Revert tab placement label text.


2006-11-17  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c, src/main.c:
   Fixed compile error under Win32.
   Ignore pressed Stop button under Win32 (at least for the moment,
   not yet implemented).


2006-11-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c:
   Change Find Next/Previous buttons to use better stock icons.
 * src/callbacks.c, src/sci_cb.c, src/document.c, src/document.h:
   Fix sign comparison warnings.


2006-11-16  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/main.c: Enabled DnD also for the main notebook widget to drop
               files in the main area of Geany.


2006-11-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/vte.c: Don't unload the VTE module on exit to avoid crashes on
              some systems.
 * src/main.c: Fixed small memory leak.
 * src/callbacks.c, src/callbacks.h, src/document.c, src/document.h,
   src/main.c, src/sci_cb.c:
   Enabled drag and drop for the whole main window to be able to drop
   files even if no tabs are open.
   Moved code for getting the file list to document_open_file_list().


2006-11-15  Frank Lanitz  <frank@frank.uvena.de>

 * src/about.c, configure.in, THANKS, po/zh_TW.po: