@@ -257,8 +257,15 @@ static gint document_create_new_sci(const gchar *filename)
 	gint new_idx;
 	document *this;
 	gint tabnum;
+	gint cur_pages = gtk_notebook_get_n_pages(GTK_NOTEBOOK(app->notebook));
 
-	if (gtk_notebook_get_n_pages(GTK_NOTEBOOK(app->notebook)) == 1)
+	if (cur_pages == 0)
+	{
+		// now we get the first file tab so enable moving of file tabs and
+		// disable Dnd for dropping files
+		notebook_disable_dnd_for_dropping_files();
+	}
+	else if (cur_pages == 1)
 	{
 		gint idx = document_get_cur_idx();
 		// remove the empty document and open a new one
@@ -380,6 +387,10 @@ gboolean document_remove(guint page_num)
 		document_undo_clear(idx);
 		if (gtk_notebook_get_n_pages(GTK_NOTEBOOK(app->notebook)) == 0)
 		{
+			// no more open file tabs so disable moving of file tabs and
+			// enable Dnd for dropping files
+			notebook_enable_dnd_for_dropping_files();
+
 			ui_update_tag_list(-1, FALSE);
 			//on_notebook1_switch_page(GTK_NOTEBOOK(app->notebook), NULL, 0, NULL);
 			ui_set_window_title(-1);
@@ -1007,7 +1018,7 @@ gint document_find_text(gint idx, const gchar *text, gint flags, gboolean search
 	if (flags & SCFIND_REGEXP) search_backwards = FALSE;
 
 	first_visible_line = sci_get_first_visible_line(doc_list[idx].sci);
-	
+
 	selection_start = sci_get_selection_start(doc_list[idx].sci);
 	selection_end = sci_get_selection_end(doc_list[idx].sci);
 	if ((selection_end - selection_start) > 0)
