@@ -1,3 +1,15 @@
+2006-11-21  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * src/callbacks.c, src/callbacks.h, src/document.c, src/main.c,
+   src/notebook.c, src/notebook.h:
+   Removed DnD handler for the main window (not very useful).
+   Fixed broken tab reordering by only enabling DnD for dropping files
+   when there are no open file tabs, otherwise disable it and enable
+   DnD for moving file tabs. Dropping files into Geany when file tabs
+   are open still works because then it is handled by the Scintilla
+   widget.
+
+
 2006-11-18  Nick Treleaven  <nick.treleaven@btinternet.com>
 
  * src/sciwrappers.c, src/sciwrappers.h:
